--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>The Anarchy Site</title>
+	<title>The Somewhat Anarchy Site</title>
 </head>
 <body>
-	
+	<h1>The Somewhat Anarchy Site</h1>
+	<h3>On this website I will accept almost any pull requests</h3>
 </body>
 </html>
