Added style.css and updated index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>The Somewhat Anarchy Site</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1>The Somewhat Anarchy Site</h1>
-	<h3>On this website I will accept almost any pull requests</h3>
+	<h2>On this website I will accept almost any pull requests <br>
+		To minimize the risk of getting denied, <b>avoid:</b>
+	</h3>
+	<p>
+		- Malicious Code <br>
+		- Excessively Offensive Content <br>
+		- Removing other peoples stuff without reason <br>
+		- Being a jerk <br>
+	</p>
+	
 </body>
 </html>
