Added style.css and updated index.html

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 	<h1>The Somewhat Anarchy Site</h1>
 	<h2>On this website I will accept almost any pull requests <br>
 		To minimize the risk of getting denied, <b>avoid:</b>
-	</h3>
+	</h2>
 	<p>
 		- Malicious Code <br>
 		- Excessively Offensive Content <br>
 		- Removing other peoples stuff without reason <br>
 		- Being a jerk <br>
 	</p>
-	
+	<p>
+		(Also please make this website look nicer)
+	</p>
 </body>
 </html>
