--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		- Being a jerk <br>
 	</p>
 	<p>
-		(Also please make this website look nicer)
+		(Also please make the css better)
 	</p>
 </body>
 </html>
