--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>The Somewhat Anarchy Site</title>
 	<link rel="stylesheet" href="style.css">
+	<meta http-equiv='cache-control' content='no-cache'>
+	<meta http-equiv='expires' content='0'>
+	<meta http-equiv='pragma' content='no-cache'>
 </head>
+
 <body>
 	<h1>The Somewhat Anarchy Site</h1>
 	<h2>On this website I will accept almost any pull requests <br>
-		To minimize the risk of getting denied, <b>avoid:</b>
+		To minimize the risk of getting denied, its best to<b>avoid:</b>
 	</h2>
 	<p>
 		- Malicious Code <br>
@@ -20,4 +25,5 @@
 		(Also please make the css better)
 	</p>
 </body>
+
 </html>
