Added a contributor list

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 	<p>
 		(Also please make the css better)
 	</p>
+	<h4>Contributors</h4>
+	<ul>
+  		<li>aFrogThatExists</li>
+	</ul>
 </body>
 
 </html>
