--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<p>
 		(Also please make the css better)
 	</p>
-	<h4>Contributors</h4>
+	<h4>Contributors so far:</h4>
 	<ul>
   		<li>aFrogThatExists</li>
 	</ul>
