--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<h1>The Somewhat Anarchy Site</h1>
 	<h2>On this website I will accept almost any pull requests <br>
-		To minimize the risk of getting denied, its best to<b> avoid:</b>
+	but to minimize the risk of getting denied, its best to<b> avoid:</b>
 	</h2>
 	<p>
 		- Malicious Code <br>
