--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		- Excessively Offensive Content <br>
 		- Removing other peoples stuff without reason <br>
 		- Being a jerk <br>
+		- Advertising <br>
 	</p>
 	<p>
 		(Also please make the css better)
