--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 	<img src="https://www.oster.ca/on/demandware.static/-/Sites-master-catalog/default/dw230c86fa/images/highres/TSSTTRJB30-033-1.jpg">
 	<br>
 	<b>The toaster and the tree are best of friends.</b>
+	<img
+      src="https://images.unsplash.com/photo-1674514646504-f77b9c91d402?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDR8fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=700&q=60"
+    />
+    <br />
+    <b>A Deer loves all including tree and toaster.</b>
 </body>
 
 </html>
