--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<br>
 	[INSERT Non Copyright Problematic Image of Toaster]
 	<br>
-	<b>The toaster and the tree are best of friends.</b>
+	<b>The toaster and the tree are best of friends.</b><br>
 	<img
       src="https://images.unsplash.com/photo-1674514646504-f77b9c91d402?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDR8fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=700&q=60"
     />
