--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	<ul>
   		<li>aFrogThatExists</li>
 		<li>VanimalKnerd</li>
+		<li>Smartlinuxcoder</li>
 	</ul>
 	[INSERT Non Copyright Problematic Image of Tree]
 	<br>
